--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,12 @@
 			<artifactId>javafaker</artifactId>
 			<version>0.15</version>
 		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>8.0.0.Final</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
